Fixes default vertical icon position for SC.SMALL_CONTROL_SIZE checkbox.
- The icon position for the small checkbox was 1px too low and if the view is constrained to 14px, the icon bottom was chopped off.

--- a/frameworks/desktop/resources/checkbox_view.css
+++ b/frameworks/desktop/resources/checkbox_view.css
@@ -3,3 +3,7 @@
   top: -1px;
   left: 0;
 }
+
+.sc-button-view.sc-checkbox-view.sc-small-size img {
+  top: -2px;
+}
